<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyDissertationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/material_drawer_account_header_title"
                android:text="@string/my_dissertation_title"
                android:textAlignment="center"
                android:textColor="@color/material_drawer_dark_primary_text"
                android:textSize="@dimen/material_drawer_account_header_title"
                android:fontFamily="@font/rosario"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="315dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/android_evo"
                android:scaleType="fitCenter"
                android:src="@drawable/pwa"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/merienda"
                android:paddingStart="15dp"
                android:text="@string/my_dissertation_text"
                android:textAlignment="textStart"
                android:textColor="@color/material_drawer_dark_primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/merienda"
                android:paddingStart="15dp"
                android:text="@string/my_dissertation_text2"
                android:textAlignment="textStart"
                android:textColor="@color/material_drawer_dark_primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/merienda"
                android:paddingStart="15dp"
                android:text="@string/my_dissertation_text3"
                android:textAlignment="textStart"
                android:textColor="@color/material_drawer_dark_primary_text"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>