<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
tools:context=".MyEducationFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/merienda"
            android:text="Получило образование в следующих учебных заведениях:"
            android:textAlignment="center"
            android:textSize="@dimen/material_drawer_account_header_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginBottom="30dp">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/merienda"
            android:paddingStart="15dp"
            android:text="@string/edu_text"
            android:textAlignment="textStart"
            android:textColor="@color/material_drawer_dark_primary_text"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/merienda"
            android:paddingStart="15dp"
            android:text="@string/edu_text2"
            android:textAlignment="textStart"
            android:textColor="@color/material_drawer_dark_primary_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ingener"
            android:layout_marginBottom="40dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/merienda"
            android:paddingStart="15dp"
            android:text="@string/edu_text3"
            android:textAlignment="textStart"
            android:textColor="@color/material_drawer_dark_primary_text"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/merienda"
            android:paddingStart="15dp"
            android:text="@string/edu_text4"
            android:textAlignment="textStart"
            android:textColor="@color/material_drawer_dark_primary_text"
            android:textSize="16sp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/hakerman"
            android:scaleType="centerCrop"/>

    </LinearLayout>
</ScrollView>
</FrameLayout>